[workspace]
members = [
    "alert-worker",
    "api-gateway",
    "scoring-engine",
    "shared-types",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
tracing = "0.1.41"